<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">全能影音</string>
    <string name="widget_name" translatable="false">全能影音-迷你</string>
    <string name="menu_home">首页</string>
    <string name="menu_video">视频</string>
    <string name="menu_audio">音乐</string>
    <string name="menu_profile">个人</string>
    <string name="menu_settings">设置</string>
    <string name="menu_audio_player">音乐播放</string>
    <string name="menu_video_player">视频播放</string>
    <string name="ok">确定</string>
    <string name="menu">菜单</string>
    <string name="cancel">取消</string>
    <string name="quit">退出应用程序</string>
    <string name="other">其他</string>
    <string name="home_tip_1">1.标题栏向右滑动打开菜单</string>
    <string name="home_tip_2">2.点击下面的按钮打开菜单</string>
    <string name="home_tip_3">3.本源码SO库基于VLC编译</string>
    <string name="home_tip_4">4.支持开源，分享精彩世界</string>
    <string name="home_tip_5">全能影音V1.0@Caoyamin@VLC！</string>
    <string name="home_tip_btn">点击我</string>
    <string name="filebrowser_title">选择要播放的媒体文件</string>
    <string name="sortby">排序条件</string>
    <string name="sortby_name">名称</string>
    <string name="sortby_length">长度</string>
    <string name="searchable_hint">搜索…</string>
    <string name="history">历史记录</string>
    <string name="search">搜索</string>
    <string name="search_history">搜索历史</string>
    <plurals name="search_found_results_quantity">
        <item quantity="other">找到 %d 条结果</item>
    </plurals>
    <string name="play">播放</string>
    <string name="play_from_start">从开头开始播放</string>
    <string name="play_as_audio">作为音频播放</string>
    <string name="play_as_video">作为视频播放</string>
    <string name="append">追加</string>
    <string name="play_all">全部播放</string>
    <string name="append_all">全部追加</string>
    <string name="last_playlist">上次使用时的播放列表</string>
    <string name="delete">删除</string>
    <string name="set_song">设为铃声</string>
    <string name="info">信息</string>
    <string name="confirm_delete">是否删除文件“%1$s”?</string>
    <string name="ringtone_set">“%1$s”已设为新铃声。</string>
    <string name="ringtone_error">设置铃声时发生错误。</string>
    <string name="pause">暂停</string>
    <string name="info_title">VLC Beta</string>
    <string name="unknown_artist">未知艺术家</string>
    <string name="unknown_album">未知专辑</string>
    <string name="unknown_genre">未知流派</string>
    <string name="songs">歌曲</string>
    <plurals name="songs_quantity">
        <item quantity="other">%d 首歌曲</item>
    </plurals>
    <string name="artists">艺术家</string>
    <string name="albums">专辑</string>
    <plurals name="albums_quantity">
        <item quantity="other">%d 张专辑</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="other">%d 个子文件夹</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="other">%d 个媒体文件</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 视频</item>
        <item quantity="other">%d 视频</item>
    </plurals>
    <string name="internal_memory">内部存储</string>
    <string name="parent_folder">转到上级目录</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="bookmarks">书签</string>
    <string name="equalizer">均衡器</string>
    <string name="all_albums">所有专辑</string>
    <string name="genres">流派</string>
    <string name="playlists">播放列表</string>
    <string name="title">标题</string>
    <string name="artist">艺术家</string>
    <string name="album">专辑</string>
    <string name="directory">目录</string>
    <string name="directories">目录</string>
    <string name="loading">正在加载</string>
    <string name="please_wait">请稍候…</string>
    <string name="nomedia">未找到媒体文件，请传输一些文件到您的设备，或调整偏好设置。</string>
    <string name="mediafiles">媒体文件</string>
    <string name="notavailable">不可用</string>
    <string name="nosubdirectory">无子目录。</string>
    <string name="nohistory">尚无播放历史记录。</string>
    <string name="validation">是否确定?</string>
    <string name="cover_art">专辑封面</string>
    <string name="shuffle">随机</string>
    <string name="repeat">无循环/单曲循环/全部循环</string>
    <string name="previous">上一曲</string>
    <string name="stop">停止</string>
    <string name="next">下一曲</string>
    <string name="locked">已锁定</string>
    <string name="unlocked">已解锁</string>
    <string name="surface_best_fit">最为合适</string>
    <string name="surface_fit_horizontal">水平匹配</string>
    <string name="surface_fit_vertical">垂直匹配</string>
    <string name="surface_fill">填充</string>
    <string name="surface_original">居中</string>
    <string name="thumbnail">缩略图</string>
    <string name="unseekable_stream">非跳转串流</string>
    <string name="refresh">刷新</string>
    <string name="track_audio">音频轨</string>
    <string name="track_video">视频轨</string>
    <string name="track_text">字幕轨</string>
    <string name="track_unknown">未知轨</string>
    <string name="track_codec_info">编解码器: %1$s\n</string>
    <string name="track_language_info">语言: %1$s\n</string>
    <string name="volume">音量</string>
    <string name="brightness">亮度</string>
    <plurals name="track_channels_info_quantity">
        <item quantity="other">%1$d 声道\n</item>
    </plurals>
    <string name="track_samplerate_info">采样率: %1$d Hz\n</string>
    <string name="track_resolution_info">分辨率: %1$dx%2$d\n</string>
    <string name="track_framerate_info">帧率: %1$.3f\n</string>
    <string name="tools">工具</string>
    <string name="playback_speed">回放速度</string>
    <string name="sleep_title">睡眠计时器</string>
    <string name="sleep_cancel">取消睡眠计时器</string>
    <string name="jump_to_time">转到时间</string>
    <string name="subtitle_label">添加字幕文件</string>
    <string name="subtitle_select">选择字幕文件</string>
    <string name="no_file_picker_found">系统中未找到文件选择器。</string>
    <string name="open">打开</string>
    <string name="open_mrl">打开 MRL</string>
    <string name="open_mrl_dialog_title">打开网络流</string>
    <string name="open_mrl_dialog_msg">请输入网络 MRL: 如 http://、mms:// 或 rtsp://</string>
    <string name="error_not_compatible">抱歉，该版本的 VLC for Android™ 尚不支持您的设备。</string>
    <string name="error_problem">抱歉，VLC for Android 加载失败，需要关闭。</string>
    <string name="error_message_is">错误消息为 (协助排查问题时请提供该内容):\n</string>
    <string name="encountered_error_title">回放错误</string>
    <string name="encountered_error_message">VLC 播放该媒体时遇到问题。\n请尝试刷新媒体库。</string>
    <string name="invalid_location">指定位置 %1$s 无法播放</string>
    <string name="app_name_full">VLC for Android™</string>
    <string name="licence">授权许可</string>
    <string name="revision">修订版本</string>
    <string name="about">关于</string>
    <string name="about_text">VLC for Android™ 是广受欢迎的开源媒体播放器 VLC media player 的移植版本。Android™ 版本可以读取大多数文件及网络流。</string>
    <string name="compiled_by">此版本 VLC 的编译者为:</string>
    <string name="vlc_authors">VLC 全体作者。</string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="preferences">系统设置</string>
    <string name="library_prefs_category">媒体库</string>
    <string name="directories_summary">选择要收录于媒体库的目录</string>
    <string name="add_custom_path">添加自定义路径</string>
    <string name="add_custom_path_description">输入要扫描的其他自定义目录:</string>
    <string name="remove_custom_path">移除自定义路径</string>
    <string name="main_prefs_category">常规</string>
    <string name="automatic">自动</string>
    <string name="screen_orientation">视频屏幕方向</string>
    <string name="screen_orientation_sensor">自动 (传感器感应)</string>
    <string name="screen_orientation_start_lock">开始播放时锁定</string>
    <string name="screen_orientation_portrait">纵向</string>
    <string name="screen_orientation_landscape">横向</string>
    <string name="screen_orientation_reverse_portrait">纵向翻转</string>
    <string name="screen_orientation_reverse_landscape">横向翻转</string>
    <string name="enable_brightness_gesture">启用亮度手势</string>
    <string name="enable_brightness_gesture_summary">在视频回放过程中，通过手势控制显示亮度</string>
    <string name="enable_headset_detection">启用耳机侦测</string>
    <string name="enable_headset_detection_summary">耳机移除时暂停；插入时继续播放</string>
    <string name="enable_wheel_bar">启用滚动条</string>
    <string name="enable_wheel_bar_summary">另一种风格的视频界面进度条</string>
    <string name="enable_steal_remote_control">独占耳机远程控制</string>
    <string name="enable_steal_remote_control_summary">通过拦截其他应用的远程控制避免冲突。可能导致 HTC 手机的双击拨号功能无法使用。</string>
    <string name="performance_prefs_category">性能</string>
    <string name="chroma_format">强制画面色度</string>
    <string name="chroma_format_summary">RGB 32 位: 默认色度\nRGB 16 位: 性能稍高，但画质略低\nYUV: 性能最高，但并非在所有设备上都可用。仅限 Android 2.3 及更高版本使用。</string>
    <string name="enable_iomx">硬件加速解码</string>
    <string name="enable_iomx_summary">提高性能，但可能不适用于所有设备。</string>
    <string name="enable_time_stretching_audio">启用音频的时间伸缩</string>
    <string name="enable_time_stretching_audio_summary">可加速与减慢音频播放而不改变音调 (需要较快设备支持)。</string>
    <string name="enable_frame_skip">启用跳帧</string>
    <string name="enable_frame_skip_summary">加速解码，但可能降低画质。</string>
    <string name="deblocking">去块滤镜设置</string>
    <string name="deblocking_summary">更改去块滤镜设置。能够改进视频质量。仅供高级用户使用。</string>
    <string name="deblocking_always">完全去块 (最慢)</string>
    <string name="deblocking_nonref">中度去块</string>
    <string name="deblocking_nonkey">最少去块</string>
    <string name="deblocking_all">不去块 (最快)</string>
    <string name="other_prefs_category">其它</string>
    <string name="clear_history">清除搜索历史记录</string>
    <string name="clear_media_db">清除媒体数据库</string>
    <string name="media_db_cleared">媒体数据库已清除!</string>
    <string name="subtitles_text_encoding">字幕文本编码</string>
    <string name="debug_logs">调试日志</string>
    <string name="start_logging">开始记录日志</string>
    <string name="stop_logging">停止记录日志</string>
    <string name="clear_log">清除日志</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="copied_to_clipboard">日志内容已复制到剪贴板。</string>
    <string name="advanced_prefs_category">高级</string>
    <string name="advanced_debugging">高级调试</string>
    <string name="aout">音频输出</string>
    <string name="aout_summary">更改 VLC 输出音频的方式。</string>
    <string name="aout_audiotrack">AudioTrack 类 (原生)</string>
    <string name="aout_audiotrack_java">AudioTrack 类 (Java)</string>
    <string name="aout_opensles">OpenSL ES</string>
    <string name="network_caching">网络缓存值</string>
    <string name="network_caching_summary">缓冲网络媒体的时间量 (单位为毫秒)。硬件解码时无效。留空可重置。</string>
    <string name="enable_verbose_mode">详尽模式</string>
    <string name="enable_verbose_mode_summary">增加详尽程度 (logcat)</string>
    <string name="set_locale">设置区域变量</string>
    <string name="set_locale_detail">留空可重置</string>
    <string name="set_locale_popup">请退出并重置 VLC 使更改生效。</string>
    <string name="load_1_period" translatable="false">.</string>
    <string name="load_2_period" translatable="false">..</string>
    <string name="load_3_period" translatable="false">...</string>
    <string name="about_copyright" translatable="false">Copyleft &#169; 1996&#8211;2013 by VideoLAN.\n</string>
    <string name="empty" translatable="false"></string>
    <string name="colon" translatable="false">:</string>
    <string name="authors" translatable="false">Sébastien&#160;Toque, Rafaël&#160;Carré, Jean-Baptiste&#160;Kempf, Edward&#160;Wang, Michael&#160;Merg, Ludovic&#160;Fauvet, Adrien&#160;Maglo, Rémi&#160;Duraffort, Dominique&#160;Martinet, Jean-Philippe&#160;André, Martin&#160;Storsjö, Alexandre&#160;Perraud, Hugo&#160;Beauzée-Luyssen, Felix&#160;Paul&#160;Kühne, John Mooring, Pavol Rusnak, Rohit Yadav, Tanguy Pruvot, Thomas Clavier, Asad Mehmood, Christoph Miebach, David Carré, Garret Kelly, Philipp Dreimann, Walter Heck.</string>
    <string name="about_link" translatable="false">        &lt;a href=&quot;http://www.videolan.org/vlc/&quot;&gt;http://www.videolan.org/vlc/&lt;/a&gt;</string>
    <string name="hardware_acceleration">硬件加速</string>
    <string name="hardware_acceleration_summary">禁用: 最为稳定。\n解码: 可提升性能。\n完全: 可进一步提升性能。</string>
    <string name="enable_jump_buttons">启用快进后退菜单</string>
</resources>