<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/aboutDilogTxt"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:text="@string/open_mrl_dialog_title"
        android:textColor="@color/holo_blue_light"
        android:textSize="16dip" />

    <EditText
        android:id="@+id/webSiteEdit"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@+id/aboutDilogTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:textColor="#808080"
        android:textSize="14dip" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/webSiteEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/openBtn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_selector"
            android:text="@string/open"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>