<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/top_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:padding="5dp" >

        <RelativeLayout
            android:id="@+id/screen_oritation_rl"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/list_top_selector_holo_light"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/screen_settings"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/screen_orientation"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/icon_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:id="@+id/hardware_speed_rl"
            android:layout_gravity="center_vertical"
            android:background="@drawable/list_center_selector_holo_light"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/enable_iomx"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/icon_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chroma_format_rl"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_gravity="center_vertical"
            android:background="@drawable/list_center_selector_holo_light"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/chroma_format"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/chroma_format"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/icon_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_gravity="center_vertical"
            android:background="@drawable/list_center_selector_holo_light"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/enable_jump_buttons"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.yamin.kk.view.SwitchButton
                android:id="@+id/forward_backward_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_gravity="center_vertical"
            android:background="@drawable/list_bottom_selector_holo_light"
            android:clickable="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/enable_brightness_gesture"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.yamin.kk.view.SwitchButton
                android:id="@+id/brightness_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>